@@ -1,16 +1,16 @@
 # Copyright 1993, 1994, 1995, 1996, 1997, 2000, 2001, 2003, 2004, 2006, 2007,
-# 2009, 2010 Free Software Foundation, Inc.
+# 2009, 2010, 2012 Free Software Foundation, Inc.
 
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
 # the Free Software Foundation; either version 3 of the License, or
 # (at your option) any later version.
-# 
+#
 # This program is distributed in the hope that it will be useful,
 # but WITHOUT ANY WARRANTY; without even the implied warranty of
 # MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 # GNU General Public License for more details.
-# 
+#
 # You should have received a copy of the GNU General Public License
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 51 Franklin Street - Fifth Floor, Boston, MA 02110-1301, USA.
@@ -405,7 +405,7 @@ proc run_dump_test { name {extra_options {}} } {
     if { $opts(not-skip) != "" } then {
 	set skip 1
 	foreach glob $opts(not-skip) {
-	    if {[istarget $glob]} { 
+	    if {[istarget $glob]} {
 		set skip 0
 		break
 	    }
@@ -420,23 +420,29 @@ proc run_dump_test { name {extra_options {}} } {
 	}
 	set skip 1
 	foreach glob $opts(target) {
-	    if {[istarget $glob]} { 
+	    if {[istarget $glob]} {
 		set skip 0
 		break
 	    }
 	}
-	if {$skip} { 
+	if {$skip} {
 	    unsupported $testname
-	    return 
+	    return
 	}
     }
     if { $opts(not-target) != "" } then {
 	foreach glob $opts(not-target) {
 	    if {[istarget $glob]} {
 		unsupported $testname
-		return 
+		return
 	    }
 	}
+    }
+
+    if { [string match "*--compress-debug-sections*" $opts(as)] \
+	 && ![is_zlib_supported] } {
+	unsupported $testname
+	return
     }
 
     if { $opts(source) == "" } {
