@@ -1,5 +1,5 @@
 # Copyright (C) 1993, 1994, 1997, 1998, 1999, 2000, 2001, 2002, 2003,
-# 2004, 2005, 2007, 2008, 2009, 2010  Free Software Foundation, Inc.
+# 2004, 2005, 2007, 2008, 2009, 2010, 2012  Free Software Foundation, Inc.
 
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -71,7 +71,7 @@ proc gas_host_run { cmd redir } {
 	set return_contents_of "gas.stderr"
     } elseif [regexp ">&.*" $redir] then {
 	# See PR 5322 for why the following line is used.
-	regsub ">&" $redir "" output_file	
+	regsub ">&" $redir "" output_file
 	set command "$cmd 2>&1"
     } elseif [regexp "2>.*" $redir] then {
 	set output_file "gas.out"
@@ -582,7 +582,7 @@ proc run_dump_test { name {extra_options {}} } {
     if { $opts(not-skip) != "" } then {
 	set skip 1
 	foreach glob $opts(not-skip) {
-	    if {[istarget $glob]} { 
+	    if {[istarget $glob]} {
 		set skip 0
 		break
 	    }
@@ -597,23 +597,29 @@ proc run_dump_test { name {extra_options {}} } {
 	}
 	set skip 1
 	foreach glob $opts(target) {
-	    if {[istarget $glob]} { 
+	    if {[istarget $glob]} {
 		set skip 0
 		break
 	    }
 	}
-	if {$skip} { 
+	if {$skip} {
 	    unsupported $testname
-	    return 
+	    return
 	}
     }
     if { $opts(not-target) != "" } then {
 	foreach glob $opts(not-target) {
 	    if {[istarget $glob]} {
 		unsupported $testname
-		return 
+		return
 	    }
 	}
+    }
+
+    if { [string match "*--compress-debug-sections*" $opts(as)] \
+	 && ![is_zlib_supported] } {
+	unsupported $testname
+	return
     }
 
 
