@@ -25,6 +25,10 @@ if ![is_elf_format] {
     return
 }
 
+if ![is_zlib_supported] {
+    return
+}
+
 # The following tests require running the executable generated by ld.
 if ![isnative] {
     return
